2015-12-10 Michele Pinamonti <michele.pinamonti@gmail.com>
        * ReferenceSample option fixed (relative overall normalization variation kept)
        * Image format propagated to syst plots, and now possible to specify more than one (e.g. eps,png)
        * PieChart plot fixed and moved to main output directory (as SignalRegions)
        
2015-12-06 Loic Valery <lvalery@cern.ch>
        * Improve tables by automating the script -> Still to be improved for the $$
        * Adding pie charts

2015-12-05 Loic Valery <lvalery@cern.ch>
        * Remove useless fits from the limits computation (when everything uses data, no need to fit to get an Asimov)
        * Fixing nans for the regions with 0 signal events bins 

2015-12-04 Loic Valery <lvalery@cern.ch>
        * Fixing the fully blinded limits to be compatible when no data sample is there
        * Adding the limit configuraiton in all the example config files

2015-12-03 Michele Pinamonti <michele.pinamonti@gmail.com>
        * ReferenceSample option added for systematics (to derive syst relativly to a given sample)
        * Type::GHOST added for Sample => sample not shown enywhere, but used for systs with ReferenceSample option
        
2015-12-03 Calvet Thomas <calvet@cppm.in2p3.fr>
	* Merging trunk with devbranch
	
2015-12-02 Michele Pinamonti <michele.pinamonti@gmail.com>
        * IgnoreWeight option added for systematics (e.g. to avoid using pile-up weight for MC systematics)
        * Data not shown if Region has ASIMOVDATA
        * (thanks to Arthur) Fix Stat-only limit  and significance by adding a dummy NP
        * Fix fully blind limit
        
2015-12-01 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit, Region: Syst table output added: when running with option d, one table per region created
        * signals scaled by nominal NormFactor when plotting pre-fit
        
2015-11-30 Michele Pinamonti <michele.pinamonti@gmail.com>